--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,16 @@ logger.org.springframework.security.level=DEBUG
 spring.security.oauth2.client.registration.google.client-id=986268083423-43m49ukd30o81vkf95cvuk9csn1rggaq.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
+
+# naver OAuth2
+spring.security.oauth2.client.registration.naver.client-id=6FmcgdOG3DUtxO9V8IUC
+spring.security.oauth2.client.registration.naver.client-secret=J7ZrkCZeI8
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:9001/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.scope=name,email
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
