--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,9 +32,12 @@ spring.security.oauth2.client.registration.google.client-id=986268083423-43m49uk
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 
+# Facebook OAuth2
+
+
 # naver OAuth2
-spring.security.oauth2.client.registration.naver.client-id=9nT4I8rQ5JXyiSwlaqrQ
-spring.security.oauth2.client.registration.naver.client-secret=L5QZtXlaO_
+spring.security.oauth2.client.registration.naver.client-id=6FmcgdOG3DUtxO9V8IUC
+spring.security.oauth2.client.registration.naver.client-secret=J7ZrkCZeI8
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:9001/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.scope=name,email
@@ -44,3 +47,8 @@ spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+# kakao OAuth2
+
+
+# JWT ???? ->, chart
